# QKD-Protocols

./: .gitignore  README.md  pyproject.toml
qkdcode/: __init__.py  bb84.py  channel.py  eavesdropping.py
qkdnotebooks /: bb84.ipynb
